--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,8 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+.page-container{
+    max-width: 1320px;
+    padding: 5px 25px;
+    margin: 0 auto;
+}
